importando los archivos

--- a/resources/assets/js/documentos/table-documentos.html
+++ b/resources/assets/js/documentos/table-documentos.html
@@ -1,7 +1,7 @@
 <div class="table-documentos">
 	<div class="datos-documentos">
 		<p>:nombre:</p>
-		<button class="btn btn-primary" id="add_document" data-id=":turnado:">Enviar Documento</button>
+		<button class="btn btn-primary" id="add_document" data-id=":turnado:" data-volante=":volante:">Enviar Documento</button>
 	</div>
 
 	<table class="table">
@@ -14,4 +14,7 @@
 			:documentos:
 		</tbody>
 	</table>
+
+	<div id="errors"></div>
+
 </div>
