haciendo turnados generales

--- a/resources/assets/js/documentos/table-documentos.html
+++ b/resources/assets/js/documentos/table-documentos.html
@@ -1,10 +1,16 @@
 <div class="table-documentos">
 	<div class="datos-documentos">
-		<p>:nombre:</p>
-		<button class="btn btn-primary" id="add_document" data-id=":turnado:" data-volante=":volante:">Enviar Documento</button>
+		
+		<button class="btn btn-primary" 
+			id="add_document" 
+			data-id=":turnado:" 
+			data-volante=":volante:"
+			data-puesto=":puesto:">
+				Enviar Documento
+		</button>
 	</div>
 
-	<table class="table">
+	<table class="table" id="documentos">
 		<thead>
 			<th>Documento</th>
 			<th>Fecha</th>
@@ -15,6 +21,5 @@
 		</tbody>
 	</table>
 
-	<div id="errors"></div>
 
 </div>
