--- a/resources/assets/js/documentos/upload-form.html
+++ b/resources/assets/js/documentos/upload-form.html
@@ -5,6 +5,7 @@
 		<input type="file" name="uploadFile" id="uploadFile" class="form-control">
 		<input type="hidden" name="idTurnadoJuridico" value=":idTurnado:">
 		<input type="hidden" name="idVolante" value=":idVolante:">
+		<input type="hidden" name="idPuestoJuridico" value=":puesto:">
 	</div>
 	<div class="form-group">
 		<label>Comentario</label>
