haciendo turnados hacia abajo

--- a/resources/assets/js/documentos/table-documentos.html
+++ b/resources/assets/js/documentos/table-documentos.html
@@ -1,21 +1,11 @@
 <div class="table-documentos">
-	<div class="datos-documentos">
-		
-		<button class="btn btn-primary" 
-			id="add_document" 
-			data-id=":turnado:" 
-			data-volante=":volante:"
-			data-puesto=":puesto:">
-				Enviar Documento
-		</button>
-	</div>
-
 	<table class="table" id="documentos">
 		<thead>
-			<th>Documento</th>
 			<th>Fecha</th>
+			<th>Prioridad</th>
 			<th>Comentario</th>
-			<th>Tipo</th>
+			<th>Estado</th>
+			<th>Documento</th>
 		</thead>
 		<tbody>
 			:documentos:
